examples/parser/effects.an

effect Log with log: fn String -> Unit

effect Use a with
    get: fn Unit -> a
    set: fn a I32 -> Unit

main () =
    handle log "test1"
    | log s -> print s

    // Test parsing of pattern matching within handle
    handle
        log "test2"
    | log "a" -> print "case 1"
    | log "b" -> print "case 2"
    | log _   -> print "case 3"

    handle foo + bar
    | set 0 a -> resume ()
    | get () -> foo resume 1 // test 'resume' is parsed as a normal identifier
    | set _ b -> resume ()

    handle ()
    | return _ -> "foo"
    | log _ -> "impossible"

map1 (l: List a) (f: fn a -> b can Log) : List b = ()

map2 (l: List a) (f: fn a -> b pure) : List b = ()

map3 (l: List a) (f: fn a -> b pure) : List b pure = ()

map4 (l: List a) (f: fn a -> b) : List b can Log = ()

// args: -e ast --no-color
// expected exit status: 1
// expected stdout:
// effect Log with
//     log: fn String -> Unit
// 
// effect Use a with
//     get: fn Unit -> a
//     set: fn a I32 -> Unit
// 
// main () =
//     handle log "test1"
//     | log s -> print s
//     handle 
//         log "test2"
//     handle foo + bar
//     | set 0 a -> resume ()
//     | get () -> foo resume 1
//     | set _ b -> resume ()
//     handle ()
//     map1 (l: List a) (f: fn a -> b can Log) : List b = ()
//     map2 (l: List a) (f: fn a -> b pure) : List b = ()
//     map3 (l: List a) (f: fn a -> b pure) : List b pure = ()
//     map4 (l: List a) (f: fn a -> b) : List b can Log = ()

// expected stderr:
// examples/parser/effects.an:15:5
// 14 |         log "test2"
// 15 |     | log "a" -> print "case 1"	// error: Expected an expression but found `|`
//    |     ^
// 16 |     | log "b" -> print "case 2"
// 
// examples/parser/effects.an:16:5
// 15 |     | log "a" -> print "case 1"
// 16 |     | log "b" -> print "case 2"	// error: Expected an expression but found `|`
//    |     ^
// 17 |     | log _   -> print "case 3"
// 
// examples/parser/effects.an:17:5
// 16 |     | log "b" -> print "case 2"
// 17 |     | log _   -> print "case 3"	// error: Expected an expression but found `|`
//    |     ^
// 
// examples/parser/effects.an:25:5
// 24 |     handle ()
// 25 |     | return _ -> "foo"	// error: Expected an expression but found `|`
//    |     ^
// 26 |     | log _ -> "impossible"
// 
// examples/parser/effects.an:26:5
// 25 |     | return _ -> "foo"
// 26 |     | log _ -> "impossible"	// error: Expected an expression but found `|`
//    |     ^
// 
// examples/parser/effects.an:96:1
// 96 | 	// error: Expected the end of this block but found end of input
//    | 
// 
// Found 6 errors and 0 warnings

